# webrtc_gateway_controller

./: Cargo.toml  LICENSE  README.md
devel/: .catkin  setup.sh
docs/: aliases.js  search-index.js  settings.html  source-files.js
docs/implementors/core/clone/: trait.Clone.js
docs/implementors/core/cmp/: trait.Eq.js  trait.Ord.js  trait.PartialEq.js  trait.PartialOrd.js
docs/implementors/core/convert/: trait.From.js
docs/implementors/core/fmt/: trait.Debug.js  trait.Display.js
docs/implementors/core/hash/: trait.Hash.js
docs/implementors/core/marker/: trait.Freeze.js  trait.Send.js  trait.StructuralEq.js  trait.StructuralPartialEq.js  trait.Sync.js  trait.Unpin.js
docs/implementors/failure/: trait.Fail.js
docs/skyway_webrtc_gateway_api/: all.html  fn.initialize.html  index.html  sidebar-items.js
docs/skyway_webrtc_gateway_api/common/: struct.PhantomId.html  struct.SocketInfo.html  trait.SerializableSocket.html
docs/skyway_webrtc_gateway_api/data/: enum.DataConnectionEventEnum.html  fn.close_data_socket.html  fn.connect.html  fn.disconnect.html  fn.listen_events.html  fn.open_data_socket.html  fn.redirect.html  fn.status.html  index.html  sidebar-items.js  struct.ConnectQuery.html  struct.ConnectionQueryOption.html  struct.DataConnectionIdWrapper.html  struct.DataConnectionStatus.html  struct.DataIdWrapper.html  struct.DcInit.html  struct.RedirectDataParams.html
docs/skyway_webrtc_gateway_api/error/: enum.Error.html  index.html  sidebar-items.js  struct.ErrorItem.html  struct.ErrorResponse.html  struct.Errors.html  struct.ReqwestError.html
docs/skyway_webrtc_gateway_api/media/: enum.MediaConnectionEventEnum.html  fn.answer.html  fn.call.html  fn.delete_media.html  fn.delete_rtcp.html  fn.disconnect.html  fn.listen_events.html  fn.open_media_socket.html  fn.open_rtcp_socket.html  fn.send_pli.html  fn.status.html  index.html  sidebar-items.js  struct.AnswerQuery.html  struct.AnswerResponse.html  struct.AnswerResponseParams.html  struct.CallQuery.html  struct.CallResponse.html  struct.Constraints.html  struct.MediaConnectionIdWrapper.html  struct.MediaConnectionStatus.html  struct.MediaParams.html  struct.RedirectParameters.html  struct.SsrcPair.html
docs/skyway_webrtc_gateway_api/peer/: enum.PeerEventEnum.html  fn.create.html  fn.delete.html  fn.listen_events.html  fn.status.html  index.html  sidebar-items.js  struct.CreatePeerQuery.html  struct.CreatedResponse.html  struct.PeerCallEvent.html  struct.PeerCloseEvent.html  struct.PeerConnectionEvent.html  struct.PeerErrorEvent.html  struct.PeerInfo.html  struct.PeerOpenEvent.html  struct.PeerStatusMessage.html
docs/skyway_webrtc_gateway_api/prelude/: index.html  sidebar-items.js  struct.DataConnectionId.html  struct.DataId.html  struct.MediaConnectionId.html  struct.MediaId.html  struct.PeerId.html  struct.PeerInfo.html  struct.PhantomId.html  struct.RtcpId.html  struct.SocketInfo.html  struct.Token.html  trait.SerializableSocket.html
docs/src/skyway_webrtc_gateway_api/: error.rs.html  lib.rs.html  prelude.rs.html
example/: data.rs  data.toml  media.rs  media.toml  peer.rs
example/terminal/: mod.rs
examples/: main.rs
helper/: Cargo.toml
helper/src/: lib.rs  server.rs
src/: error.rs  helper.rs  lib.rs  main.rs  new_error.rs  prelude.rs
src/common/: api.rs  api_refactor.rs  formats.rs  mod.rs
src/data/: api.rs  data.rs  formats.rs  mod.rs
src/helper/: server.rs
src/media/: api.rs  data.rs  formats.rs  mod.rs
src/peer/: api.rs  data.rs  formats.rs  mod.rs
src/terminal/: mod.rs
tests/: peer.rs
(+49 files in other folders)
