[package]
name = "skyway-webrtc-gateway-api"
version = "0.0.3"
authors = ["Toshiya Nakakura <nakakura@me.com>"]
edition = "2018"
license = "MIT"
description = "REST API Wrapper for SkyWay WebRTC Gateway"
repository = "https://github.com/nakakura/webrtc_gateway_controller"
readme = "README.md"
keywords = ["skyway", "webrtc", "gateway", "rtp"]
documentation = "https://docs.rs/skyway-webrtc-gateway-api"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
categories = ["api-bindings"]

[dependencies]
anyhow = "1.0.38"
dotenv_codegen = "0.15.0"
env_logger = "0.8.2"
failure = "0.1.8"
futures = "0.3.12"
log = "0.4.14"
reqwest = { version = "0.11.0", features = ["json"] }
serde = { version = "1.0.123", features = ["derive"] }
serde_derive = "1.0.123"
serde_json = "1.0.62"
thiserror = "1.0.23"
tokio = { version = "1.2.0", features = ["full"] }

[dev-dependencies]
either = "1.6.1"
mockito = "0.29.0"
toml = "0.5.8"

[[example]]
name = "peer"
path = "example/peer.rs"

[[example]]
name = "data"
path = "example/data.rs"

[[example]]
name = "media"
path = "example/media.rs"
