[package]
name = "skyway-webrtc-gateway-api"
version = "0.2.0"
authors = ["Toshiya Nakakura <nakakura@me.com>"]
edition = "2018"
license = "MIT"
description = "REST API Wrapper for SkyWay WebRTC Gateway"
repository = "https://github.com/nakakura/webrtc_gateway_controller"
readme = "README.md"
keywords = ["skyway", "webrtc", "gateway", "rtp"]
documentation = "https://docs.rs/skyway-webrtc-gateway-api"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
categories = ["api-bindings"]

[dependencies]
anyhow = "1.0.66"
dotenv_codegen = "0.15.0"
env_logger = "0.9.3"
failure = "0.1.8"
futures = "0.3.25"
log = "0.4.17"
reqwest = { version = "0.11.12", features = ["json"] }
serde = { version = "1.0.147", features = ["derive"] }
serde_derive = "1.0.147"
serde_json = "1.0.87"
thiserror = "1.0.37"
tokio = { version = "1.24.2", features = ["full"] }

[dev-dependencies]
either = "1.8.0"
mockito = "0.31.0"
once_cell = "1.16.0"
toml = "0.5.9"

[[example]]
name = "peer"
path = "example/peer.rs"

[[example]]
name = "data"
path = "example/data.rs"

[[example]]
name = "media"
path = "example/media.rs"
